tests/integration/owned_abstractions/moved_owned_var_error3.june
// error: moved variable accessed after move

struct Foo {
    z: i64

    fun bar(self, abc: Foo) {

    }
}


let foo = new owned Foo(z: 100)

foo.bar(foo)

println(foo.z)